trunk/Archive2/1d/7760d895c6c879/output
main.cpp:11:24: error: invalid operands to binary expression ('X' and 'X')
    std::cout << (X::a | X::b);
                  ~~~~ ^ ~~~~
1 error generated.
