trunk/Archive2/1d/7760d895c6c879/main.cpp
#include <iostream>

enum class X
{
    a = 1,
    b = 2
};

int main()
{
    std::cout << (X::a | X::b);
}